reduced fontsize on mobile navbar to fix weired jump on toggle

--- a/src/assets/css/general-style.css
+++ b/src/assets/css/general-style.css
@@ -34,3 +34,7 @@ body {
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #fff;
 }
+
+button {
+  padding: 0;
+}
